Improve root and resource handling
Signed-off-by: Jean Patrick Mathes <jeanpatrick.mathes@gmx.de>